<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlanRouteActivity">


    <TextView
        android:id="@+id/directions_textView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:text=""
        android:scrollbars = "vertical"
        android:textSize="16dp"
        app:layout_constraintBottom_toTopOf="@id/brief_directions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <Button
        android:id="@+id/next_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />

    <Button
        android:id="@+id/clear_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Clear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/directions_textView"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="@+id/directions_textView"
        app:layout_constraintTop_toTopOf="@+id/directions_textView"
        app:layout_constraintVertical_bias="0.85" />

    <Button
        android:id="@+id/compact_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="See List"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/directions_textView"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="@+id/directions_textView"
        app:layout_constraintTop_toTopOf="@+id/directions_textView"
        app:layout_constraintVertical_bias="0.85" />

    <Button
        android:id="@+id/skip_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Skip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/directions_textView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/directions_textView"
        app:layout_constraintTop_toTopOf="@+id/directions_textView"
        app:layout_constraintVertical_bias="0.95" />

    <Button
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/directions_textView"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="@+id/directions_textView"
        app:layout_constraintTop_toTopOf="@+id/directions_textView"
        app:layout_constraintVertical_bias="0.95" />

    <Button
        android:id="@+id/relocate_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Change Location"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/directions_textView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/directions_textView"
        app:layout_constraintTop_toTopOf="@+id/directions_textView"
        app:layout_constraintVertical_bias="0.75" />

    <EditText
        android:id="@+id/lat_et"
        android:layout_width="184dp"
        android:layout_height="47dp"
        android:ems="10"
        android:hint="lat"
        android:inputType="numberDecimal|numberSigned"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/lng_et"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/directions_textView"
        app:layout_constraintTop_toTopOf="@+id/directions_textView"
        app:layout_constraintVertical_bias="0.65" />

    <EditText
        android:id="@+id/lng_et"
        android:layout_width="184dp"
        android:layout_height="47dp"
        android:ems="10"
        android:hint="lng"
        android:inputType="numberDecimal|numberSigned"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/directions_textView"
        app:layout_constraintHorizontal_bias="0.627"
        app:layout_constraintStart_toEndOf="@+id/lat_et"
        app:layout_constraintTop_toTopOf="@+id/directions_textView"
        app:layout_constraintVertical_bias="0.65" />

    <CheckBox
        android:id="@+id/brief_directions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Brief Directions"
        app:layout_constraintBottom_toTopOf="@+id/lng_et"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/directions_textView" />

</androidx.constraintlayout.widget.ConstraintLayout>